Update clinic registration unsuccessful email template for improved clarity and engagement
- Changed the variable name from 'reason' to 'remarks' for better context in the email service.
- Enhanced the email template by adding emphasis to the platform name and updating the wording for a more supportive tone.
- Revised the closing statement to "Warm Regards" for a friendlier touch, fostering a more personal connection.

--- a/src/templates/clinic-registration-unsuccessful.ejs
+++ b/src/templates/clinic-registration-unsuccessful.ejs
@@ -525,8 +525,9 @@
                                             <td class=t46>
                                               <p class=t44
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                We regret to inform you that your clinic registration on the Sendscript
-                                                platform has not been approved.
+                                                We regret to inform you that your clinic registration on the <span
+                                                class=t16
+                                                style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;">Sendscript</span> platform has not been approved.
                                               </p>
                                             </td>
                                           </tr>
@@ -555,7 +556,9 @@
                                             <td class=t52>
                                               <p class=t50
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Reason: <%= remarks %>.</p>
+                                                <span
+                                                    class=t16
+                                                    style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;">Reason:</span> <%= remarks %>.</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -583,9 +586,8 @@
                                             <td class=t58>
                                               <p class=t56
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Please review and update the information, then reinitiate the
-                                                registration process. If you require any assistance, feel free to reach
-                                                out to our support team at support@sendscript.com</p>
+                                                To proceed, please review and update the submitted information, then reinitiate the registration. If you need any assistance, our support team is available at support@sendscript.com and we will be happy to help. 
+</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -613,8 +615,7 @@
                                             <td class=t64>
                                               <p class=t62
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                We appreciate your understanding and look forward to assisting you
-                                                further.
+                                                We appreciate your understanding and look forward to assisting you further.
                                               </p>
                                             </td>
                                           </tr>
@@ -643,7 +644,7 @@
                                             <td class=t70>
                                               <p class=t68
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Regards, <br />The Sendscript Team</p>
+                                                Warm Regards, <br />The Sendscript Team</p>
                                             </td>
                                           </tr>
                                         </table>
