--- a/src/templates/clinic-registration.ejs
+++ b/src/templates/clinic-registration.ejs
@@ -554,8 +554,7 @@
                                             <td class=t52>
                                               <p class=t50
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Your clinic registration has been successfully received and is currently
-                                                under review by our team.</p>
+                                                Your clinic registration has been successfully received and is currently under review by our team.</p>
                                             </td>
                                           </tr>
                                         </table>
