Enhance invite doctor email template and update related logic for improved clarity and engagement
- Updated the invite doctor email template to personalize the greeting and enhance the invitation message.
- Revised the email sending logic to accommodate new parameters for invitee and inviting doctor names, as well as the acceptance link.
- Adjusted test cases to reflect changes in the email structure and parameters for consistency.

--- a/src/templates/invite-doctor.ejs
+++ b/src/templates/invite-doctor.ejs
@@ -474,7 +474,8 @@
                                             <td class=t34>
                                               <h1 class=t32
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                You&apos;ve Been Invited to Join Sendscript</h1>
+                                                Doctor You&apos;ve Been Invited to Join Sendscript
+                                              </h1>
                                             </td>
                                           </tr>
                                         </table>
@@ -502,12 +503,64 @@
                                             <td class=t40>
                                               <p class=t38
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear <%= invitee_name %>,<br />
+                                                Dear <%= invitee_name %>,</p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t39
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                   <%= inviting_doctor_name %> has
-                                                    invited you to join Sendscript &ndash; a smart way to manage
-                                                    prescriptions and collaborate with healthcare
-                                                    professionals.<br />Click
-                                                    the link below to accept the invitation and set up your account:</p>
+                                                    invited you to join Sendscript &ndash; a fast and secure e-prescription platform.</p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t39
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Click the link below to accept the invitation and set up your account:</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -592,7 +645,7 @@
                                             <td class=t58>
                                               <p class=t56
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Regards, <br />The Sendscript Team</p>
+                                                Warm Regards, <br />The Sendscript Team</p>
                                             </td>
                                           </tr>
                                         </table>
