--- a/src/templates/clinic-join-request.ejs
+++ b/src/templates/clinic-join-request.ejs
@@ -637,11 +637,18 @@
                                         <table class=t149 role=presentation cellpadding=0 cellspacing=0 width=100%
                                           style="width:100%;">
                                           <tr>
-                                            <td class=t148 style="overflow:hidden;border-radius:16px 16px 16px 16px;">
+                                            <td class=t148 style="border-top:1px solid #1B3F6D;">
                                               <div class=t147 style="width:100%;text-align:center;">
                                                 <div class=t146 style="display:inline-block;">
                                                   <table class=t145 role=presentation cellpadding=0 cellspacing=0
                                                     align=center valign=middle>
+                                                    <tr>
+                                                      <td>
+                                                        <div class=t75
+                                                          style="mso-line-height-rule:exactly;mso-line-height-alt:21px;line-height:21px;font-size:1px;display:block;">
+                                                          &nbsp;&nbsp;</div>
+                                                      </td>
+                                                    </tr>
                                                     <tr class=t144>
                                                       <td>
                                                       </td>
