Refine email templates for improved clarity and engagement
- Enhanced various email templates including account-related notifications and clinic registration confirmations for better readability and user experience.
- Updated table structures and spacing for improved layout consistency across templates.
- Revised messaging to adopt a more supportive tone, ensuring clarity in communication and fostering a personal connection with recipients.

--- a/src/templates/patient-data-access.ejs
+++ b/src/templates/patient-data-access.ejs
@@ -764,7 +764,8 @@
                                                                                         <td class=t75>
                                                                                             <p class=t74
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:300;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Date of Birth: <%= patient_dob %></p>
+                                                                                                Date of Birth: <%= patient_dob %>
+                                                                                            </p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
