--- a/src/templates/clinic-registration-approved1.ejs
+++ b/src/templates/clinic-registration-approved1.ejs
@@ -850,11 +850,11 @@
                                                                                                                             <tr>
                                                                                                                                 <td class=t132
                                                                                                                                     style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                                                                    <p class=t131
+                                                                                                                                    <a href="https://sendscript.com/privacy-policy" target="_blank" class=t131
                                                                                                                                         style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                                                                                         Privacy
                                                                                                                                         Policy
-                                                                                                                                    </p>
+                                                                                                                                    </a>
                                                                                                                                 </td>
                                                                                                                             </tr>
                                                                                                                         </table>
@@ -872,12 +872,12 @@
                                                                                                                             <tr>
                                                                                                                                 <td class=t136
                                                                                                                                     style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                                                                    <p class=t135
+                                                                                                                                    <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t135
                                                                                                                                         style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                                                                                         Terms
                                                                                                                                         and
                                                                                                                                         Conditions
-                                                                                                                                    </p>
+                                                                                                                                    </a>
                                                                                                                                 </td>
                                                                                                                             </tr>
                                                                                                                         </table>
