--- a/src/templates/leh-email-template.ejs
+++ b/src/templates/leh-email-template.ejs
@@ -1132,9 +1132,9 @@
                                                                             <tr>
                                                                               <td class=t144
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t143
+                                                                                <a href="https://sendscript.com/privacy-policy" target="_blank" class=t143
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Privacy Policy</p>
+                                                                                  Privacy Policy</a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -1146,9 +1146,9 @@
                                                                             <tr>
                                                                               <td class=t148
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t147
+                                                                                <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t147
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Terms and Conditions</p>
+                                                                                  Terms and Conditions</a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
