--- a/src/templates/pharmacy-owner-registration-approved.ejs
+++ b/src/templates/pharmacy-owner-registration-approved.ejs
@@ -704,37 +704,7 @@
                                 </td>
                               </tr>
                               <!--<![endif]-->
-                              <tr>
-                                <td align=center>
-                                  <table class=t157 role=presentation cellpadding=0 cellspacing=0
-                                    style="Margin-left:auto;Margin-right:auto;">
-                                    <tr>
-                                      <td width=363 class=t156 style="width:363px;">
-                                        <table class=t155 role=presentation cellpadding=0 cellspacing=0 width=100%
-                                          style="width:100%;">
-                                          <tr>
-                                            <td class=t154 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                              <p class=t152
-                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                sendscript
-                                                <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span>
-                                                is
-                                                a
-                                                registered
-                                                trademark
-                                                of
-                                                Msmb
-                                                Healthcare
-                                                Limited.
-                                              </p>
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
+                              
                               <tr>
                                 <td align=center>
                                   <table class=t173 role=presentation cellpadding=0 cellspacing=0
@@ -758,11 +728,11 @@
                                                           <tr>
                                                             <td class=t159
                                                               style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                              <p class=t158
+                                                              <a href="https://sendscript.com/privacy-policy" target="_blank" class=t158
                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                 Privacy
                                                                 Policy
-                                                              </p>
+                                                              </a>
                                                             </td>
                                                           </tr>
                                                         </table>
@@ -773,12 +743,12 @@
                                                           <tr>
                                                             <td class=t163
                                                               style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                              <p class=t162
+                                                              <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t162
                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                 Terms
                                                                 and
                                                                 Conditions
-                                                              </p>
+                                                              </a>
                                                             </td>
                                                           </tr>
                                                         </table>
@@ -789,6 +759,37 @@
                                                   </table>
                                                 </div>
                                               </div>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t157 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=363 class=t156 style="width:363px;">
+                                        <table class=t155 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t154 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
+                                              <p class=t152
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
+                                                sendscript
+                                                <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span>
+                                                is
+                                                a
+                                                registered
+                                                trademark
+                                                of
+                                                Msmb
+                                                Healthcare
+                                                Limited.
+                                              </p>
                                             </td>
                                           </tr>
                                         </table>
