--- a/src/templates/update-email-address.ejs
+++ b/src/templates/update-email-address.ejs
@@ -794,11 +794,11 @@
                                                           <tr>
                                                             <td class=t159
                                                               style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                              <p class=t158
+                                                              <a href="https://sendscript.com/privacy-policy" target="_blank" class=t158
                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                 Privacy
                                                                 Policy
-                                                              </p>
+                                                              </a>
                                                             </td>
                                                           </tr>
                                                         </table>
@@ -809,12 +809,12 @@
                                                           <tr>
                                                             <td class=t163
                                                               style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                              <p class=t162
+                                                              <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t162
                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                 Terms
                                                                 and
                                                                 Conditions
-                                                              </p>
+                                                              </a>
                                                             </td>
                                                           </tr>
                                                         </table>
