Update invoice email template for improved messaging clarity
- Modified the invoice email template to enhance the greeting by replacing "Payment Confirmed" with an exclamation mark for a more engaging tone.
- Ensured the template maintains its responsive design and visual appeal across devices.

--- a/src/templates/invoice-from-pharmacy.ejs
+++ b/src/templates/invoice-from-pharmacy.ejs
@@ -482,8 +482,7 @@
                                               <h1 class=t32
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                 Your Invoice from
-                                                <%= pharmacy_name %> &ndash;
-                                                Payment Confirmed</h1>
+                                                <%= pharmacy_name %>!</h1>
                                             </td>
                                           </tr>
                                         </table>
